--- a/Ansible Playbook/filebeat-install.yml
+++ b/Ansible Playbook/filebeat-install.yml
@@ -1,1 +1,31 @@
+---
+- name: installing and launching filebeat
+  hosts: webservers
+  become: yes
+  tasks:
+    # Use command module 
+  - name: download filebeat .deb file
+    command: curl -L -O https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-7.6.1-amd64.deb 
+  
+    # Use command module
+  - name: Install filebeat .deb
+    command: dpkg -i filebeat-7.6.1-amd64.deb
+  
+    # Use copy module
+  - name: drop in filebeat.yml 
+    copy:
+      src: /etc/ansible/files/filebeat-config.yml
+      dest: /etc/filebeat/filebeat.yml
 
+    # Use commamd module
+  - name: enable and configure system module
+    command: filebeat modules enable system
+
+    # Use command module
+  - name: setup filebeat
+    command: filebeat setup
+
+  - name: Enable filebeat service
+    systemd:
+      name: filebeat
+      enabled: yes 
